# my_sdl_game

./: CMakeLists.txt  pro_build.ps1  pro_git_add.ps1
ext/SDL2/lib/: SDL2main.lib
include/: main.h  noncopyable.h  project_path.h  singleton.hpp
res/: data.txt
src/: main.c  main.cpp
